--- a/vbarkovskij.com/less/sections/reference.less
+++ b/vbarkovskij.com/less/sections/reference.less
@@ -142,13 +142,16 @@
 
         li {
             transition: transform .1s;
+            -webkit-transition: transform .1s;
+
             display: inline-block;
             margin-bottom: 30px;
             margin-left: 30px;
             text-align: center;
             transform-origin: left top;
 
-            background: no-repeat center;
+            background-repeat: no-repeat;
+            background-position: center;
             background-size: contain;
             background-color: #fff;
 
